--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <script id="dsq-count-scr" src="//adamssbros-cz.disqus.com/count.js" async></script>
 </head>
 
 <body id="page-top">
@@ -68,7 +69,7 @@
                     <img class="img-fluid rounded" src="./img/fillout0.JPG" alt="..." />
                 </div>
                 <div class="col-6 mb-4" style="margin-left: auto;">
-                    <img class="rounded img-fluid" src="./img/fillout1.JPG"  alt="..." />
+                    <img class="rounded img-fluid" src="./img/fillout1.JPG" alt="..." />
                 </div>
             </div>
 
@@ -78,7 +79,8 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Jaké služby poskytuji?</h2>
-                <h3 class="section-subheading text-muted">Vaši partneři pro instalatéřství, dřevo výrobu, a zimní sporty!</h3>
+                <h3 class="section-subheading text-muted">Vaši partneři pro instalatéřství, dřevo výrobu, a zimní
+                    sporty!</h3>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-6 col-sm-6 mb-4">
@@ -92,7 +94,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Instalatéřství</div>
-                            <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                            <div class="portfolio-caption-subheading text-muted">Kvalita na prvním místě</div>
                         </div>
                     </div>
                 </div>
@@ -107,7 +109,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Fotovoltaické instalace</div>
-                            <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                            <div class="portfolio-caption-subheading text-muted">Ušetřete za předraženou energii</div>
                         </div>
                     </div>
                 </div>
@@ -122,7 +124,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Dřevo výroba</div>
-                            <div class="portfolio-caption-subheading text-muted">Branding</div>
+                            <div class="portfolio-caption-subheading text-muted">Dřevěné výrobky na míru</div>
                         </div>
                     </div>
                 </div>
@@ -137,7 +139,7 @@
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Horolezectví a zimní sporty</div>
-                            <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                            <div class="portfolio-caption-subheading text-muted">Sportovat ale bezpečně</div>
                         </div>
                     </div>
                 </div>
@@ -145,6 +147,30 @@
         </div>
     </section>
     <!-- About-->
+
+    <section>
+        <div id="disqus_thread"></div>
+        <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function () { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://adamssbros-cz.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+                Disqus.</a></noscript>
+    </section>
+
     <section class="page-section" id="about">
         <div class="container">
             <div class="text-center">
@@ -282,29 +308,7 @@
             </div>
         </div>
     </section>
-    <!-- Clients-->
-    <div class="py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/microsoft.svg"
-                            alt="..." aria-label="Microsoft Logo" /></a>
-                </div>
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/google.svg"
-                            alt="..." aria-label="Google Logo" /></a>
-                </div>
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/facebook.svg"
-                            alt="..." aria-label="Facebook Logo" /></a>
-                </div>
-                <div class="col-md-3 col-sm-6 my-3">
-                    <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="assets/img/logos/ibm.svg"
-                            alt="..." aria-label="IBM Logo" /></a>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <!-- Contact-->
     <section class="page-section" id="contact">
         <div class="container">
@@ -408,31 +412,65 @@
                         alt="Close modal" /></div>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col h-100">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur
-                                    adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt
-                                    repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae,
-                                    nostrum, reiciendis facere nemo!</p>
-                                <ul class="list-inline">
-                                    <li>
-                                        <strong>Client:</strong>
-                                        Threads
-                                    </li>
-                                    <li>
-                                        <strong>Category:</strong>
-                                        Illustration
-                                    </li>
-                                </ul>
-                                <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
-                                    type="button">
-                                    <i class="fas fa-xmark me-1"></i>
-                                    Close Project
-                                </button>
+                                <h2 class="text-uppercase text-center">Instalatéřství</h2>
+                                <p class="item-intro text-muted text-center">Kvalita na prvním místě</p>
+                                <!-- Gallery -->
+                                <div class="row">
+                                    <div class="col-6 row">
+                                        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+                                                class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
+
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"
+                                                class="w-100 shadow-1-strong rounded mb-4"
+                                                alt="Wintry Mountain Landscape" />
+                                        </div>
+
+                                        <div class="col-lg-4 mb-4 mb-lg-0">
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain2.webp"
+                                                class="w-100 shadow-1-strong rounded mb-4"
+                                                alt="Mountains in the Clouds" />
+
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+                                                class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
+                                        </div>
+
+                                        <div class="col-lg-4 mb-4 mb-lg-0">
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(18).webp"
+                                                class="w-100 shadow-1-strong rounded mb-4" alt="Waves at Sea" />
+
+                                            <img src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain3.webp"
+                                                class="w-100 shadow-1-strong rounded mb-4"
+                                                alt="Yosemite National Park" />
+                                        </div>
+                                    </div>
+                                    <div class="col text-left">
+                                        <p>Naše instalatéřské služby jsou synonymem kvality a spolehlivosti. Jsme
+                                            připraveni
+                                            zajistit správnou instalaci a údržbu vašich zařízení. Nezáleží na tom, zda
+                                            potřebujete instalatéra pro domácnost, firmu nebo průmyslový komplex, na nás
+                                            se
+                                            můžete spolehnout.</p>
+                                        <ul class="list-inline">
+                                            <li>
+                                                <strong>Začal jsem poskytovat:</strong>
+                                                25.12.2028
+                                            </li>
+                                            <li>
+                                                <strong>Ukončených projektů:</strong>
+                                                přes 29
+                                            </li>
+                                        </ul>
+                                        <button class="btn btn-outline-dark btn-xl text-uppercase"
+                                            data-bs-dismiss="modal" type="button">
+                                            <i class="fas fa-xmark me-1"></i>
+                                            Zavřít
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
