--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>Adamssbrosgrouping</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="img/ostatni/" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -288,7 +288,7 @@
         <div class="contact1">
             <div class="container-contact1">
                 <div class="contact1-pic js-tilt" data-tilt>
-                    <img src="./img/img-01.png" alt="IMG">
+                    <img src="./img/ostatni/img-01.png" alt="IMG">
                 </div>
     
                 <form class="contact1-form validate-form">
