--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>Adamssbrosgrouping</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="img/ostatni/" />
+    <link rel="icon" type="image/x-icon" href="img/ostatni/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
