--- a/index.html
+++ b/index.html
@@ -260,19 +260,11 @@
                     <img class="mx-auto rounded-circle" src="./img/ostatni/logo.png" alt="..." />
                     <h4>Adam Radam</h4>
                     <p class="text-muted">Zakladatel</p>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i
-                            class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i
-                            class="fab fa-facebook-f"></i></a>
                 </div>
                 <div class="team-member mx-3">
                     <img class="mx-auto rounded-circle" src="./img/sporty/sporty06.png" alt="..." />
                     <h4>Radama Adamová</h4>
                     <p class="text-muted">Spoluvlastnice</p>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i
-                            class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i
-                            class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
             <div class="row">
@@ -290,7 +282,7 @@
         <div class="contact1">
             <div class="container-contact1">
                 <div class="contact1-pic js-tilt" data-tilt>
-                    <img src="./img/ostatni/img-01.png" alt="IMG">
+                    <img src="./img/ostatni/logo.png" alt="IMG">
                 </div>
 
                 <form class="contact1-form validate-form">
