--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>Adamssbrosgrouping</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="img/ostatni/logo.png" />
+    <link rel="icon" type="image/x-icon" href="img/ostatni/logo_no_bg.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -22,6 +22,7 @@
 </head>
 
 <body id="page-top">
+
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
@@ -36,31 +37,35 @@
                     <li class="nav-item"><a class="nav-link" href="#services">O firmě</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Služby</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">O nás</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#calculator">Kalkulátor</a></li>
                     <li class="nav-item"><a class="nav-link" href="#team">Kdo jsme?</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Kontakt</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
             <div class="masthead-heading text-uppercase">Adamssbrosgrouping</div>
-            <div class="masthead-subheading">Již řadu let působíme na trhu</div>
-            <a class="btn btn-outline-light btn-xl text-uppercase" href="#services">Co děláme?</a>
+            <div class="masthead-subheading">Jsme spolehlivá firma, která splní všechny Vaše požadavky</div>
+            <a class="btn btn-primary btn-xl text-uppercase" href="#services">Co děláme?</a>
         </div>
     </header>
+
     <!-- Services-->
     <section class="page-section" id="services">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">O firmě</h2>
                 <p class="section-subheading text-muted">Vítejte v Adamssbrosgrouping, kde spojujeme vášeň s odborností
-                    a vytváříme jedinečné příběhy úspěchu pro naše klienty. Naše firma vznikla s vizí poskytovat
-                    komplexní a kvalitní služby v několika klíčových odvětvích, které zahrnují instalatéřství, dřevo
-                    výrobu, solární technologie, horolezectví a zimní sporty.</hp>
+                    a vytváříme jedinečné příběhy úspěchu pro naše klienty.</hp>
             </div>
             <div class="text-center">
+                Naše firma vznikla s vizí poskytovat
+                komplexní a kvalitní služby v několika klíčových odvětvích, které zahrnují instalatéřství, dřevo
+                výrobu, solární technologie, horolezectví a zimní sporty.
                 Naše úsilí spočívá v dosažení optimálních výsledků pro naše klienty. S Vámi spolupracujeme od prvního
                 nápadu až po dokončení projektu, abychom zajistili, že každý aspekt splňuje Vaše očekávání. S
                 Adamssbrosgrouping je kvalita zaručena.
@@ -72,7 +77,7 @@
                     <img class="img-fluid rounded" src="./img/fotovoltaika/fotovoltaika40.JPG" alt="..." />
                 </div>
                 <div class="col-6 mb-4" style="margin-left: auto;">
-                    <img class="rounded img-fluid" src="./img/instalaterstvi/instalaterstvi13.JPG" alt="..." />
+                    <img class="rounded img-fluid" src="./img/drevovyroba/drevovyroba02.jpg" alt="..." />
                 </div>
             </div>
 
@@ -83,8 +88,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Jaké služby poskytuji?</h2>
-                <h3 class="section-subheading text-muted">Vaši partneři pro instalatéřství, dřevo výrobu, a zimní
-                    sporty!</h3>
+                <h3 class="section-subheading text-muted">Pro více informací rozklikněte službu.</h3>
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-6 col-sm-6 mb-4">
@@ -109,7 +113,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="./img/fotovoltaika/fotovoltaika36.JPG" alt="..." />
+                            <img class="img-fluid" src="./img/fotovoltaika/fotovoltaika101.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Fotovoltaické instalace</div>
@@ -161,7 +165,7 @@
             <ul class="timeline">
                 <li>
                     <div class="timeline-image"><img class="rounded-circle img-fluid"
-                            src="./img/instalaterstvi/instalaterstvi08.JPG" alt="..." /></div>
+                            src="./img/instalaterstvi/instalaterstvi08_circle.jpg" alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>Březen</h4>
@@ -175,8 +179,8 @@
                     </div>
                 </li>
                 <li class="timeline-inverted">
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="./img/sporty/sporty03.JPG"
-                            alt="..." /></div>
+                    <div class="timeline-image"><img class="rounded-circle img-fluid"
+                            src="./img/sporty/sporty03_circle.jpg" alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>Květen</h4>
@@ -191,7 +195,7 @@
                 </li>
                 <li>
                     <div class="timeline-image"><img class="rounded-circle img-fluid"
-                            src="./img/fotovoltaika/fotovoltaika15.JPG" alt="..." /></div>
+                            src="./img/fotovoltaika/fotovoltaika15_circle.jpg" alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>Březen</h4>
@@ -206,7 +210,7 @@
                 </li>
                 <li class="timeline-inverted">
                     <div class="timeline-image"><img class="rounded-circle img-fluid"
-                            src="./img/drevovyroba/drevovyroba01.JPG" alt="..." /></div>
+                            src="./img/drevovyroba/drevovyroba01_circle.jpg" alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>Květen</h4>
@@ -222,6 +226,125 @@
             </ul>
         </div>
     </section>
+
+    <!-- Team-->
+    <section class="page-section bg-light" id="calculator">
+        <div class="container">
+            <h2 class="section-heading text-uppercase">Solární kalkulátor</h2>
+
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Počet lidí v domáctnosti</label>
+                            <input type="number" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">Tyto data se nikam neukládají</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Odhadovaná roční spotřeba:</label>
+                            <input type="number" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                        </div>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Střecha</label>
+                    <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
+                        <option value="1">Sedlová</option>
+                        <option value="2">Pultová</option>
+                        <option value="3">Válbová</option>
+                        <option value="3">Rovná</option>
+                    </select>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Priority</label>
+                            <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
+                                <option value="1">Nizká cena</option>
+                                <option value="2">Doručení</option>
+                                <option value="3">Recenze</option>
+                                <option value="3">Inovace</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Cíl</label>
+                            <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
+                                <option value="1">Nezávislost</option>
+                                <option value="2">Ekonomická výhoda</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <label for="exampleInputPassword1" class="form-label my-3">Vaše spotřeba</label>
+                    <div class="col">
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Elektrický boiler</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Zateplený dům</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Elektrické topenít</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Elektrické auto</label>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Bazén</label>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Vypočítat cenu elektrárny</button>
+                <p class="m-3">Vaše solární instalace bude stát x Kč</p>
+            </form>
+        </div>
+    </section>
+
+    <!-- Team-->
+    <section class="page-section" id="team">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Kdo jsme?</h2>
+                <h3 class="section-subheading text-muted">Nezklameme vaši důvěru</h3>
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="team-member mx-3">
+                    <img class="mx-auto rounded-circle" src="./img/ostatni/logo_no_bg.png" alt="..." />
+                    <h4>Adam Radam</h4>
+                    <p class="text-muted">Zakladatel</p>
+                </div>
+                <div class="team-member mx-3">
+                    <img class="mx-auto rounded-circle" src="./img/sporty/sporty06.png" alt="..." />
+                    <h4>Radama Adamová</h4>
+                    <p class="text-muted">Spoluvlastnice</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <p class="large text-muted">Adam Radam spolu s radamou adamovou jsme zakladatele firmy
+                        Adamssbrosgrouping a jsme připraveni čelit všemu co nám přijde do cesty i novým výzvám které si
+                        pro nás nachystáte.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Comments-->
     <section class="container" style="padding: 3rem 0;">
@@ -248,34 +371,6 @@
     </section>
 
 
-    <!-- Team-->
-    <section class="page-section bg-light" id="team">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="section-heading text-uppercase">Kdo jsme?</h2>
-                <h3 class="section-subheading text-muted">Nezklameme vaši důvěru</h3>
-            </div>
-            <div class="d-flex justify-content-center">
-                <div class="team-member mx-3">
-                    <img class="mx-auto rounded-circle" src="./img/ostatni/logo.png" alt="..." />
-                    <h4>Adam Radam</h4>
-                    <p class="text-muted">Zakladatel</p>
-                </div>
-                <div class="team-member mx-3">
-                    <img class="mx-auto rounded-circle" src="./img/sporty/sporty06.png" alt="..." />
-                    <h4>Radama Adamová</h4>
-                    <p class="text-muted">Spoluvlastnice</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-muted">Adam Radam spolu s radamou adamovou jsme zakladatele firmy
-                        Adamssbrosgrouping a jsme připraveni čelit všemu co nám přijde do cesty i novým výzvám které si
-                        pro nás nachystáte.</p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Contact-->
     <section class="page-section" id="contact">
@@ -396,8 +491,8 @@
                                                 přes 29
                                             </li>
                                         </ul>
-                                        <button class="btn btn-outline-dark btn-xl text-uppercase"
-                                            data-bs-dismiss="modal" type="button">
+                                        <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                            type="button">
                                             <i class="fas fa-xmark me-1"></i>
                                             Zavřít
                                         </button>
@@ -471,8 +566,8 @@
                                                 přes 98
                                             </li>
                                         </ul>
-                                        <button class="btn btn-outline-dark btn-xl text-uppercase"
-                                            data-bs-dismiss="modal" type="button">
+                                        <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                            type="button">
                                             <i class="fas fa-xmark me-1"></i>
                                             Zavřít
                                         </button>
@@ -546,8 +641,8 @@
                                                 přes 15
                                             </li>
                                         </ul>
-                                        <button class="btn btn-outline-dark btn-xl text-uppercase"
-                                            data-bs-dismiss="modal" type="button">
+                                        <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                            type="button">
                                             <i class="fas fa-xmark me-1"></i>
                                             Zavřít
                                         </button>
@@ -619,8 +714,8 @@
                                                 přes 27
                                             </li>
                                         </ul>
-                                        <button class="btn btn-outline-dark btn-xl text-uppercase"
-                                            data-bs-dismiss="modal" type="button">
+                                        <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
+                                            type="button">
                                             <i class="fas fa-xmark me-1"></i>
                                             Zavřít
                                         </button>
