--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 výroby, solárních technologií, horolezectví a zimních sportů.
             </div>
             <div class="row my-5 text-center">
-                <div class="col-6 mb-4">
+                <div class="col-sm-6 mb-4">
                     <img class="img-fluid rounded" src="./img/fotovoltaika/fotovoltaika40.JPG" alt="..." />
                 </div>
-                <div class="col-6 mb-4" style="margin-left: auto;">
+                <div class="col-sm-6 mb-4" style="margin-left: auto;">
                     <img class="rounded img-fluid" src="./img/drevovyroba/drevovyroba02.jpg" alt="..." />
                 </div>
             </div>
@@ -289,24 +289,24 @@
                             <label class="form-check-label" for="exampleCheck1">Elektrický boiler</label>
                         </div>
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Zateplený dům</label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                            <label class="form-check-label" for="exampleCheck2">Zateplený dům</label>
                         </div>
                     </div>
                     <div class="col">
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Elektrické topenít</label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck3">
+                            <label class="form-check-label" for="exampleCheck3">Elektrické topenít</label>
                         </div>
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Elektrické auto</label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck4">
+                            <label class="form-check-label" for="exampleCheck4">Elektrické auto</label>
                         </div>
                     </div>
                     <div class="col">
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Bazén</label>
+                            <input type="checkbox" class="form-check-input" id="exampleCheck5">
+                            <label class="form-check-label" for="exampleCheck5">Bazén</label>
                         </div>
                     </div>
                 </div>
