--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Adamssbrosgrouping</title>
+    <meta name="description" content="Vítejte v Adamss bros Grouping, kde spojujeme vášeň s odborností
+    a vytváříme jedinečné příběhy úspěchu pro naše klienty." />
+    <meta name="author" content="Václav Zíka" />
+    <title>Adamss Bros Grouping</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="img/ostatni/logo_no_bg.png" />
     <!-- Font Awesome icons (free version)-->
@@ -24,9 +25,9 @@
 <body id="page-top">
 
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-xl navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top">Adamssbrosgrouping</a>
+            <a class="navbar-brand" href="#page-top">Adamss Bros Grouping</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -48,7 +49,7 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-heading text-uppercase">Adamssbrosgrouping</div>
+            <div class="masthead-heading text-uppercase">Adamss Bros Grouping</div>
             <div class="masthead-subheading">Jsme spolehlivá firma, která splní všechny Vaše požadavky</div>
             <a class="btn btn-primary btn-xl text-uppercase" href="#services">Co děláme?</a>
         </div>
@@ -59,7 +60,8 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">O firmě</h2>
-                <p class="section-subheading text-muted">Vítejte v Adamssbrosgrouping, kde spojujeme vášeň s odborností
+                <p class="section-subheading text-muted">Vítejte v Adamss Bros. Grouping, kde spojujeme vášeň s
+                    odborností
                     a vytváříme jedinečné příběhy úspěchu pro naše klienty.</hp>
             </div>
             <div class="text-center">
@@ -91,7 +93,7 @@
                 <h3 class="section-subheading text-muted">Pro více informací rozklikněte službu.</h3>
             </div>
             <div class="row d-flex justify-content-center">
-                <div class="col-lg-6 col-sm-6 mb-4">
+                <div class="col-lg-6 mb-4">
                     <!-- Portfolio item 1-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
@@ -106,7 +108,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-6 mb-4">
+                <div class="col-lg-6 mb-4">
                     <!-- Portfolio item 2-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
@@ -121,14 +123,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-6 mb-4 mb-lg-0">
+                <div class="col-lg-6 mb-4 mb-lg-0">
                     <!-- Portfolio item 3-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="./img/drevovyroba/drevovyroba02.jpg" alt="..." />
+                            <img class="img-fluid" src="./img/drevovyroba/drevovyroba32.png" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Dřevo výroba</div>
@@ -136,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-6 mb-4 mb-sm-0">
+                <div class="col-lg-6 mb-4 mb-sm-0">
                     <!-- Portfolio item 4-->
                     <div class="portfolio-item">
                         <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
@@ -227,7 +229,7 @@
         </div>
     </section>
 
-    <!-- Team-->
+    <!-- Calculator-->
     <section class="page-section bg-light" id="calculator">
         <div class="container">
             <h2 class="section-heading text-uppercase">Solární kalkulátor</h2>
@@ -242,7 +244,7 @@
                             <div id="emailHelp" class="form-text">Tyto data se nikam neukládají</div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
                         <div class="mb-3">
                             <label for="exampleInputEmail1" class="form-label">Odhadovaná roční spotřeba:</label>
                             <input type="number" class="form-control" id="exampleInputEmail1"
@@ -271,7 +273,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
                         <div class="mb-3">
                             <label for="exampleInputPassword1" class="form-label">Cíl</label>
                             <select class="form-select" aria-label="Vyberte typ střechy" id="exampleInputPassword1">
@@ -283,7 +285,7 @@
                 </div>
                 <div class="row">
                     <label for="exampleInputPassword1" class="form-label my-3">Vaše spotřeba</label>
-                    <div class="col">
+                    <div class="col-sm">
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Elektrický boiler</label>
@@ -293,7 +295,7 @@
                             <label class="form-check-label" for="exampleCheck2">Zateplený dům</label>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck3">
                             <label class="form-check-label" for="exampleCheck3">Elektrické topenít</label>
@@ -303,7 +305,7 @@
                             <label class="form-check-label" for="exampleCheck4">Elektrické auto</label>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm">
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck5">
                             <label class="form-check-label" for="exampleCheck5">Bazén</label>
@@ -323,16 +325,39 @@
                 <h2 class="section-heading text-uppercase">Kdo jsme?</h2>
                 <h3 class="section-subheading text-muted">Nezklameme vaši důvěru</h3>
             </div>
-            <div class="d-flex justify-content-center">
+            <div class="d-sm-flex justify-content-center">
                 <div class="team-member mx-3">
                     <img class="mx-auto rounded-circle" src="./img/ostatni/logo_no_bg.png" alt="..." />
                     <h4>Adam Radam</h4>
                     <p class="text-muted">Zakladatel</p>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile">
+                        <i class="fa-brands fa-instagram"></i>
+
+                    </a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><svg
+                            class="svg-inline--fa fa-facebook-f" aria-hidden="true" focusable="false" data-prefix="fab"
+                            data-icon="facebook-f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"
+                            data-fa-i2svg="">
+                            <path fill="currentColor"
+                                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z">
+                            </path>
+                        </svg><!-- <i class="fab fa-facebook-f"></i> Font Awesome fontawesome.com --></a>
                 </div>
                 <div class="team-member mx-3">
                     <img class="mx-auto rounded-circle" src="./img/sporty/sporty06.png" alt="..." />
                     <h4>Radama Adamová</h4>
                     <p class="text-muted">Spoluvlastnice</p>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><svg
+                            class="svg-inline--fa fa-facebook-f" aria-hidden="true" focusable="false" data-prefix="fab"
+                            data-icon="facebook-f" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"
+                            data-fa-i2svg="">
+                            <path fill="currentColor"
+                                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z">
+                            </path>
+                        </svg><!-- <i class="fab fa-facebook-f"></i> Font Awesome fontawesome.com --></a>
                 </div>
             </div>
             <div class="row">
@@ -376,10 +401,6 @@
     <section class="page-section" id="contact">
         <div class="contact1">
             <div class="container-contact1">
-                <div class="contact1-pic js-tilt" data-tilt>
-                    <img src="./img/ostatni/logo.png" alt="IMG">
-                </div>
-
                 <form class="contact1-form validate-form">
                     <h2 class="section-heading text-uppercase">Kontaktuje nás</h2>
 
@@ -399,6 +420,12 @@
                         <span class="shadow-input1"></span>
                     </div>
 
+
+                    <div class="wrap-input1 validate-input" data-validate="Subject is required">
+                        <input class="input1" type="text" name="subject" placeholder="Telefon">
+                        <span class="shadow-input1"></span>
+                    </div>
+
                     <div class="wrap-input1 validate-input" data-validate="Message is required">
                         <textarea class="input1" name="message" placeholder="Zpráva"></textarea>
                         <span class="shadow-input1"></span>
@@ -413,6 +440,10 @@
                         </button>
                     </div>
                 </form>
+                <div class="contact1-pic js-tilt" data-tilt>
+                    <img src="./img/ostatni/logo.png" alt="IMG">
+                </div>
+
             </div>
         </div>
     </section>
@@ -446,7 +477,7 @@
                                 <p class="item-intro text-muted text-center">Kvalita na prvním místě</p>
                                 <!-- Gallery -->
                                 <div class="row">
-                                    <div class="col-6 row">
+                                    <div class="col-lg-6 m-0 m-sm-2 row">
                                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                                             <img src="./img/instalaterstvi/instalaterstvi10.JPG"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
@@ -520,7 +551,7 @@
                                 <p class="item-intro text-muted text-center">Ušetřete za předraženou energii</p>
                                 <!-- Gallery -->
                                 <div class="row">
-                                    <div class="col-6 row">
+                                    <div class="col-lg-6 m-0 m-sm-2 row">
                                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                                             <img src="./img/fotovoltaika/fotovoltaika10.JPG"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
@@ -595,7 +626,7 @@
                                 <p class="item-intro text-muted text-center">Dřevěné výrobký na míru</p>
                                 <!-- Gallery -->
                                 <div class="row">
-                                    <div class="col-6 row">
+                                    <div class="col-lg-6 m-0 m-sm-2 row">
                                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                                             <img src="./img/drevovyroba/drevovyroba01.JPG"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
@@ -664,14 +695,14 @@
                         alt="Close modal" /></div>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col h-100">
+                        <div class="col">
                             <div class="modal-body">
                                 <!-- Project details-->
                                 <h2 class="text-uppercase text-center">Horolezectví a zimní sporty</h2>
                                 <p class="item-intro text-muted text-center">Sportovat ale bezpečně</p>
                                 <!-- Gallery -->
                                 <div class="row">
-                                    <div class="col-6 row">
+                                    <div class="col-lg-6 m-0 m-sm-2 row">
                                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                                             <img src="./img/sporty/sporty02.jpg"
                                                 class="w-100 shadow-1-strong rounded mb-4" alt="Boat on Calm Water" />
