--- a/index.html
+++ b/index.html
@@ -375,31 +375,31 @@
         <div class="contact1">
             <div class="container-contact1">
                 <form class="contact1-form validate-form kwes-form"
-                action="https://kwesforms.com/api/foreign/forms/27sLMms0CvTKSz6BVPM9">
+                    action="https://kwesforms.com/api/foreign/forms/27sLMms0CvTKSz6BVPM9">
                     <h2 class="section-heading text-uppercase">Kontaktuje nás</h2>
 
 
-                    <div class="wrap-input1 validate-input" data-validate="Name is required">
+                    <div class="wrap-input1 validate-input" data-validate="Jméno je povinné">
                         <input class="input1" type="text" name="name" placeholder="Jméno">
                         <span class="shadow-input1"></span>
                     </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <div class="wrap-input1 validate-input" data-validate="Zadejte reálný email">
                         <input class="input1" type="text" name="email" placeholder="Email">
                         <span class="shadow-input1"></span>
                     </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Subject is required">
+                    <div class="wrap-input1 validate-input" data-validate="Telefonní číslo je povinné">
                         <input class="input1" type="text" name="telefon" placeholder="Telefon">
                         <span class="shadow-input1"></span>
                     </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Subject is required">
-                        <input class="input1" type="text" name="subject" placeholder="Předmět">
+                    <div class="wrap-input1 validate-input" data-validate="Zadejte, čeho se to týká">
+                        <input class="input1" type="text" name="subject" placeholder="Týká se služby">
                         <span class="shadow-input1"></span>
                     </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Message is required">
+                    <div class="wrap-input1 validate-input" data-validate="Zadejte obsah zprávy">
                         <textarea class="input1" name="message" placeholder="Zpráva"></textarea>
                         <span class="shadow-input1"></span>
                     </div>
