--- a/index.html
+++ b/index.html
@@ -159,11 +159,12 @@
 
     <!-- Calculator-->
     <section class="page-section" id="calculator">
-        <div class="container d-sm-flex justify-content-between">
-            <div>
-                <h2 class="section-heading text-uppercase">Solární kalkulátor</h2>
+        <div class="container justify-content-between">
+            <div class="">
 
-                <form>
+                <form class="w-75 w-sm-100 m-auto">
+                    <h2 class="section-heading text-uppercase">Solární kalkulátor</h2>
+
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
@@ -190,7 +191,7 @@
                             <option value="3">Rovná</option>
                         </select>
                     </div>
-                    <div class="row">
+                    <div class="row w-100">
                         <div class="col">
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Priority</label>
@@ -245,7 +246,7 @@
                     <p class="m-3">Vaše solární instalace bude stát x Kč</p>
                 </form>
             </div>
-            <div>
+            <div class="mt-5 w-75 w-sm-100 pt-5 m-auto">
                 <h2 class="section-heading text-uppercase">Tepelný kalkulátor</h2>
 
                 <form>
