--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <div class="team-member mx-3">
                     <img class="mx-auto rounded-circle" src="./img/ostatni/logo_no_bg.png" alt="..." />
                     <h4>Václav Adámek</h4>
-                    <p class="text-muted">vaclav.adamek@adamssbros.cz</p>
+                    <p class="text-muted"><a href="mailto:vaclav.adamek@adamssbros.cz">vaclav.adamek@adamssbros.cz</a></p>
                     <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/adamssbrosgrouping/"
                         target="_blank" aria-label="Václav Adámek Instagramový profil">
                         <i class="fa-brands fa-instagram"></i>
